# shopping_list_generator

./: .gitignore  README.md  pyproject.toml
shopping_list_generator/: export.py  main.py
shopping_list_generator/db/: database.py  models.py
tests/: test_shopping_list_generator.py
