[tool.poetry]
name = "shopping-list-generator"
version = "0.1.0"
description = ""
authors = ["Calum Andrew Morrell <calum@drulum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.20"
pycairo = "^1.24.0"
pygobject = "^3.44.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
